dxscale/core/exceptionLogging/objects/Logger__c/Logger__c.object-meta.xml
<CustomObject>
    <description>Custom Object used to hold log messages from the SendtoZBilling and ZuoraInvoiceUpdateBatch custom apex code.  Designed to be generic so can be used to hold any log message in the future.</description>
    <label>Logger</label>
    <nameField>
        <label>Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logger</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>