dxscale/core/exceptionLogging/objects/Logger__c/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <description>CorrelationId for tracking issues that may have been external requests</description>
    <label>Correlation Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>