dxscale/core/exceptionLogging/objects/Logger__c/fields/Exception_DML_Message__c.field-meta.xml
<CustomField>
    <fullName>Exception_DML_Message__c</fullName>
    <label>Exception DML Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>