dxscale/core/exceptionLogging/objects/Logger__c/fields/Exception_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Exception_Line_Number__c</fullName>
    <label>Exception Line Number</label>
    <type>TextArea</type>
</CustomField>