dxscale/core/exceptionLogging/objects/Logger__c/fields/Exception_Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Exception_Method_Name__c</fullName>
    <label>Exception Method Name</label>
    <type>TextArea</type>
</CustomField>