dxscale/core/exceptionLogging/objects/Logger__c/fields/Exception_StackTrace__c.field-meta.xml
<CustomField>
    <fullName>Exception_StackTrace__c</fullName>
    <label>Exception StackTrace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>