dxscale/core/exceptionLogging/objects/Logger__c/fields/Record_Details__c.field-meta.xml
<CustomField>
    <fullName>Record_Details__c</fullName>
    <label>Record Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>