dxscale/core/exceptionLogging/objects/Logger__c/fields/Record_Name_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Name_Id__c</fullName>
    <description>This would store record Id or Name of the record on which error occurred while processing</description>
    <label>Record Name/Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>