dxscale/core/exceptionLogging/objects/Logger__c/listViews/CID_Last_Week.listView-meta.xml
<ListView>
    <fullName>CID_Last_Week</fullName>
    <columns>NAME</columns>
    <columns>Correlation_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Exception_Error_Message__c</columns>
    <columns>Exception_Method_Name__c</columns>
    <columns>Exception_Type__c</columns>
    <columns>Exception_Line_Number__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Exception_StackTrace__c</columns>
    <columns>Exception_DML_Message__c</columns>
    <columns>Record_Name_Id__c</columns>
    <columns>Record_Details__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <filters>
        <field>Correlation_Id__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Last Week with CID</label>
    <sharedTo>
        <group>System_Administrators</group>
    </sharedTo>
</ListView>