dxscale/core/exceptionLogging/objects/Logger__c/listViews/CID_Today.listView-meta.xml
<ListView>
    <fullName>CID_Today</fullName>
    <columns>NAME</columns>
    <columns>Correlation_Id__c</columns>
    <columns>Exception_Method_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Exception_Error_Message__c</columns>
    <columns>Exception_Line_Number__c</columns>
    <columns>Exception_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Correlation_Id__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Today with CID</label>
    <sharedTo>
        <group>System_Administrators</group>
    </sharedTo>
</ListView>