dxscale/core/exceptionLogging/objects/Logger__c/listViews/FailedInvoiceItemBatch_filter.listView-meta.xml
<ListView>
    <fullName>FailedInvoiceItemBatch_filter</fullName>
    <columns>NAME</columns>
    <columns>Exception_DML_Message__c</columns>
    <columns>Exception_Error_Message__c</columns>
    <columns>Exception_Line_Number__c</columns>
    <columns>Exception_Method_Name__c</columns>
    <columns>Exception_StackTrace__c</columns>
    <columns>Exception_Type__c</columns>
    <columns>Record_Details__c</columns>
    <columns>Record_Name_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>FailedInvoiceItemBatch</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>FailedInvoiceItemBatch filter</label>
    <language>en_US</language>
    <sharedTo>
        <group>System_Administrators</group>
    </sharedTo>
</ListView>