dxscale/core/exceptionLogging/objects/Logger__c/listViews/Last_Week.listView-meta.xml
<ListView>
    <fullName>Last_Week</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Exception_Error_Message__c</columns>
    <columns>Exception_Method_Name__c</columns>
    <columns>Exception_Type__c</columns>
    <columns>Exception_Line_Number__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Exception_StackTrace__c</columns>
    <columns>Exception_DML_Message__c</columns>
    <columns>Record_Name_Id__c</columns>
    <columns>Record_Details__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>FailedInvoiceItemBatch</value>
    </filters>
    <label>Last Week (filtered)</label>
    <language>en_US</language>
</ListView>