dxscale/core/exceptionLogging/objects/Logger__c/listViews/TodayYK.listView-meta.xml
<ListView>
    <fullName>TodayYK</fullName>
    <columns>NAME</columns>
    <columns>Exception_Method_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Exception_Error_Message__c</columns>
    <columns>Exception_Line_Number__c</columns>
    <columns>Exception_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>FailedInvoiceItemBatch</value>
    </filters>
    <label>Today</label>
    <language>en_US</language>
    <sharedTo>
        <group>System_Administrators</group>
    </sharedTo>
</ListView>