dxscale/core/exceptionLogging/objects/Logger__c/listViews/updateZuoraObjectIssues.listView-meta.xml
<ListView>
    <fullName>updateZuoraObjectIssues</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Record_Name_Id__c</columns>
    <columns>Record_Details__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Exception_Method_Name__c</field>
        <operation>contains</operation>
        <value>updateZuoraObject</value>
    </filters>
    <label>updateZuoraObject issues</label>
    <language>en_US</language>
    <sharedTo>
        <group>System_Administrators</group>
    </sharedTo>
</ListView>