dxscale/core/exceptionLogging/objects/Logger__c/listViews/YesterdayMM.listView-meta.xml
<ListView>
    <fullName>YesterdayMM</fullName>
    <columns>NAME</columns>
    <columns>Exception_Method_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Exception_Error_Message__c</columns>
    <columns>Exception_Line_Number__c</columns>
    <columns>Exception_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Yesterday</label>
    <language>en_US</language>
    <sharedTo>
        <group>System_Administrators</group>
    </sharedTo>
</ListView>